--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-164.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-507.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-153.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-187.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.12MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇳 中国-4.71MB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-1.77MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇬🇧 英国-656.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-338.5KB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-256.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-540.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-583.0KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-301.8KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-900.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-340.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-187.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-656.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-187.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-656.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-187.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-656.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-187.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-656.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-187.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-656.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-187.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-656.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-187.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-656.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
