--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.12MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-4.71MB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-256.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-6.25MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-1016.2KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-286.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-540.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-583.0KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-301.8KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
