--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.25MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-1016.2KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-286.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-241.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-739.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-493.1KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-338.5KB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.31MB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 中国-540.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-583.0KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-301.8KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
   - {name: 🇨🇳 中国-900.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-340.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-739.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-739.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-739.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-739.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-739.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-739.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-739.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-540.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-900.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-340.8KB/s(Youtube:不良林)
 rules:
